--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "aliyun",
+    "jestrunner",
     "nestjs",
     "upserted"
   ],
@@ -14,5 +15,6 @@
     "**/node_modules": true,
     "**/dist": true,
   },
-  "jest.jestCommandLine": "yarn test"
+  "jest.jestCommandLine": "yarn test",
+  "jestrunner.jestCommand": "yarn test --detectOpenHandles",
 }
